# MMDLearning

./: .gitattributes  .gitignore  .gitignore~  README.md  domain_adapt.py  environment.yml  environment_cpu.yml  environment_cuda.yml  environment_min.yml  model_PNet.py  models.py  mweik32@perlmutter.nersc.gov  pyproject.toml  qg_tagging.py  testing_mmd.py  top_tagging.py  top_tagging_MMD.py~  top_tagging_MMD_new.py  top_tagging_MMD_v2.py  top_tagging_MMD_v2_int.py  top_tagging_MMD_v4.py  top_tagging_v3.py  utils.py
bash_scripts/: rewrite.sh
model_configs/: config_000.json  config_001.json  config_002.json  config_003.json  config_005.json  config_006.json  config_006.yaml  config_007.yaml  config__000.json
notebooks/: compare_mmd.ipynb
run_files/: run_train.sh  run_train_MMD.sh  run_train_MMD2.sh  slurm_run_train.sh  slurm_run_train_MMD.sh  slurm_run_train_src_tar.sh
scratch/: top_tagging.py  top_tagging_MMD.py  top_tagging_MMD_new.py  top_tagging_MMD_perturb.py  top_tagging_MMD_v2_int.py  top_tagging_MMD_v3.py  top_tagging_MMD_v4.py
scripts/: generate_model_config.py  top_tagging_MMD_v2.py  train.py
src/MMDLearning/data/: collate.py  dataset.py  dataset_v2.py  jetdatasets.py
src/MMDLearning/models/: model_LNet.py  model_PNet.py  predictors.py
src/MMDLearning/training/: losses.py  metrics.py  policies.py  reporting.py  schedulers.py  trainer.py  (+1 more)
test_scripts/: check_data_loading.py  check_data_loading.py~
tests/: smoke_ddp_var.py  test_config_init.py  test_dataloader_model.py  test_global_var_signle_cpu.py
top/: collate.py  dataset_v2.py
(+6 files in other folders)
