[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "MMDLearning"
version = "0.1.0"
requires-python = ">=3.9,<3.10"
dependencies = [
  "numpy",
  "pandas",
  "matplotlib",
  "scikit-learn",
  "h5py",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "jupyterlab"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
